--- a/public/index.html
+++ b/public/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
-    <title>Brightmoments XR</title> 
-    <meta name="description" content="XR Gallery of Brightmoments">
+    <title>Brightmoments VA</title>
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/favicon.png">
+    <meta name="description" content="VR Gallery of Brightmoments">
     <meta name="keywords" content="XR">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <!-- OGP -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Brightmoments XR">
-    <meta property="og:site_name" content="Brightmoments XR">
-    <meta property="og:description" content="Experience Brightmoments XR">
+    <meta property="og:title" content="Brightmoments VR">
+    <meta property="og:site_name" content="Brightmoments VR">
+    <meta property="og:description" content="Experience Brightmoments in a void">
     <meta property="og:url" content="https://brightmoments-xr.netlify.app/">
-    <meta property="og:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-2.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-5.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <!-- twitter card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://shotaro.netlify.app/">
-    <meta name="twitter:title" content="Brightmoments XR">
-    <meta name="twitter:description" content="Experience Brightmoments XR">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-2.png">
+    <meta name="twitter:title" content="Brightmoments VR">
+    <meta name="twitter:description" content="Experience Brightmoments in a void">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-5.png">
     <!-- css -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
