--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no">
     <title>Brightmoments VA</title>
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/favicon.png">
-    <meta name="description" content="VR Gallery of Brightmoments">
+    <meta name="description" content="Experience Brightmoments in a Void">
     <meta name="keywords" content="XR">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="x-dns-prefetch-control" content="on">
     <!-- OGP -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Brightmoments VR">
-    <meta property="og:site_name" content="Brightmoments VR">
-    <meta property="og:description" content="Experience Brightmoments in a void">
+    <meta property="og:title" content="Brightmoments VA">
+    <meta property="og:site_name" content="Brightmoments VA">
+    <meta property="og:description" content="Experience Brightmoments in a Void">
     <meta property="og:url" content="https://brightmoments-xr.netlify.app/">
     <meta property="og:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-5.png">
     <meta property="og:image:type" content="image/png">
@@ -23,8 +23,8 @@
     <!-- twitter card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="https://shotaro.netlify.app/">
-    <meta name="twitter:title" content="Brightmoments VR">
-    <meta name="twitter:description" content="Experience Brightmoments in a void">
+    <meta name="twitter:title" content="Brightmoments VA">
+    <meta name="twitter:description" content="Experience Brightmoments in a Void">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/shotaro-is/3d_gallery/master/public/og-image-5.png">
     <!-- css -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
